--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -11,13 +11,17 @@
     <string name="dialog_cancel">Cancelar</string>
     <string name="dialog_add">Añadir</string>
 
-    <string name="error_pattern">ERROR: %1s</string>
+    <string name="error_pattern">ERROR: %1$s</string>
     <string name="error_unknown">Causa desconocida</string>
-    <string name="error_symbol_not_found">El símbolo %1s no se encuentra! Este valor no puede ser añadido, por favor, inténtalo de nuevo.</string>
+    <string name="error_symbol_not_found">El símbolo %1$s no se encuentra! Este valor no puede ser añadido, por favor, inténtalo de nuevo.</string>
     <string name="error_io_error">No hay conexión de red! Por favor, comprueba tu conectividad o reinténtalo luego</string>
     <string name="error_no_network">No hay conexión de red! Los datos se recargarán cuando la red esté disponible.</string>
     <string name="error_no_stocks">No tienes acciones añadidas! Toca el botón flotante para añadirlas.</string>
 
-    <string name="toast_stock_added_no_connectivity">Símbolo %1s añadido. Los valores se refrescarán cuando haya red disponible.</string>
+    <string name="toast_stock_added_no_connectivity">Símbolo %1$s añadido. Los valores se refrescarán cuando haya red disponible.</string>
     <string name="toast_no_connectivity">Los valores se refrescarán cuando haya red disponible.</string>
+
+    <string name="chart_no_data">Datos no disponibles</string>
+    <string name="chart_desc">Gráfico histórico</string>
+    <string name="chart_axis_date_format">%1$d.%2$d</string>
 </resources>
