--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -24,4 +24,7 @@
     <string name="chart_no_data">Datos no disponibles</string>
     <string name="chart_desc">Gráfico histórico</string>
     <string name="chart_axis_date_format">%1$d.%2$d</string>
+    <string name="widget_stocks_title">Widget del Halcón</string>
+    <string name="empty_stocks_list">No hay valores en tu lista</string>
+
 </resources>
